<resources>
    <string name="app_name">LBoard</string>
    <string name="service_name">LBoard</string>
    <string name="settings_name">LBoard Settings</string>
    <string name="app_copyright_title">Copyright</string>
    <string name="app_copyright_info">
        Copyright 2019 Hyegyu Lee
    </string>
    <string name="app_copyright_info_license">
        Licensed under the Apache License, Version 2.0 (the "License");\n
        you may not use this file except in compliance with the License.\n
        You may obtain a copy of the License at
    </string>
    <string name="app_copyright_info_license_url">
                    http://www.apache.org/licenses/LICENSE-2.0
    </string>
    <string name="app_copyright_info_license_info">
        Unless required by applicable law or agreed to in writing, software\n
        distributed under the License is distributed on an "AS IS" BASIS,\n
        WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.\n
        See the License for the specific language governing permissions and\n
        limitations under the License.
    </string>
    <string name="pref_activation_title">Activation</string>
    <string name="pref_common_title">Common</string>
    <string name="pref_method_en_title">Alphabet Input Method</string>
    <string name="pref_method_ko_title">Korean Input Method</string>
    <string name="pref_about_title">About</string>
    <string name="pref_common_soft_mode_default">mobile</string>
    <string name="pref_method_virtual_appearance_title">Virtual Keyboard Appearance</string>
    <string name="pref_method_virtual_behaviour_title">Virtual Keyboard Behaviour</string>
    <string name="pref_common_soft_theme_title">Soft Keyboard Theme</string>
    <string name="pref_common_soft_theme_summary">Choose a soft keyboard theme.</string>
    <string name="pref_common_soft_themes_white">White</string>
    <string name="pref_common_soft_themes_dark">Dark</string>
    <string name="pref_common_soft_themes_flatwhite">Flat White</string>
    <string name="pref_common_soft_themes_flatdark">Flat Dark</string>
    <string name="pref_common_soft_theme_automatic_dark_mode_title">Automatic Dark Mode</string>
    <string name="pref_common_soft_theme_automatic_dark_mode_summary">Automatically set theme to dark one based on system settings.</string>
    <string name="pref_common_soft_mode_mobile">Mobile</string>
    <string name="pref_common_soft_mode_tablet">Tablet</string>
    <string name="pref_common_soft_mode_full">Full</string>
    <string name="pref_common_soft_height_title">Soft Key Height</string>
    <string name="pref_common_soft_height_summary">Adjust the key height.</string>
    <string name="pref_common_soft_mode_title">Soft Keyboard Mode</string>
    <string name="pref_common_soft_mode_summary">Choose mode between Mobile, Tablet, or Full.</string>
    <string name="pref_common_soft_labels_title">Soft Key Labels</string>
    <string name="pref_common_soft_labels_summary">Show soft keyboard labels.</string>
    <string name="pref_common_soft_labels_compatible_title">Compatible Jamo Labels</string>
    <string name="pref_common_soft_labels_compatible_summary">Use compatible hangul jamo for soft keyboard labels.</string>
    <string name="pref_common_repeat_rate_title">Soft Key Repeat Rate</string>
    <string name="pref_common_repeat_rate_summary">Adjust soft key repeat rate of repeatable keys (delete, etc.).</string>
    <string name="pref_common_long_click_delay_title">Soft Key Long Press Delay</string>
    <string name="pref_common_long_click_delay_summary">Adjust soft key long-press delay.</string>
    <string name="pref_common_margin_horizontal_title">Soft Key Horizontal Margin</string>
    <string name="pref_common_margin_horizontal_summary">Adjust soft keyboard margin on left and right.</string>
    <string name="pref_common_margin_bottom_title">Soft Key Bottom Margin</string>
    <string name="pref_common_margin_bottom_summary">Adjust soft keyboard margin on bottom.</string>
    <string name="pref_common_soft_one_handed_title">One-Handed Keyboard Mode</string>
    <string name="pref_common_soft_one_handed_summary">Reduce keyboard width for one-handed use.</string>
    <string name="pref_common_soft_one_handed_margin_title">Width Reduction Amount</string>
    <string name="pref_common_soft_one_handed_margin_summary">Adjust amount of width reduction for one-handed mode.</string>
    <string name="pref_common_soft_switch_between_methods_title">Switch between Input Methods</string>
    <string name="pref_common_soft_switch_between_methods_summary">If enabled, the language key switches to next input method.</string>
    <string name="pref_common_soft_vibrate_title">Key Vibration</string>
    <string name="pref_common_soft_vibrate_summary">If enabled, vibrate on key press.</string>
    <string name="pref_common_soft_vibrate_duration_title">Vibrate Duration</string>
    <string name="pref_common_soft_vibrate_duration_summary">Adjust key vibrate duration. Default value is 30.</string>
    <string name="pref_common_soft_sound_title">Key Sound</string>
    <string name="pref_common_soft_sound_summary">If enabled, play sound on key press.</string>
    <string name="pref_common_soft_sound_type_title">Sound Type</string>
    <string name="pref_common_soft_sound_type_summary">Choose key press sound type.</string>
    <string name="pref_common_soft_sound_type_click">Click</string>
    <string name="pref_common_soft_sound_type_pop">Pop</string>
    <string name="pref_common_soft_sound_volume_title">Sound Volume</string>
    <string name="pref_common_soft_sound_volume_summary">Adjust key press sound volume percent.</string>
    <string name="pref_common_soft_popups_title">Key Popups</string>
    <string name="pref_common_soft_popups_summary">Show popups on key press.</string>
    <string name="pref_method_virtual_title">Virtual Keyboard</string>
    <string name="pref_method_soft_layout_title">Soft Keyboard Layout</string>
    <string name="pref_method_soft_layout_summary">Choose a soft keyboard layout.</string>
    <string name="pref_method_soft_layout_10cols_mobile">10 Columns Mobile</string>
    <string name="pref_method_soft_layout_10cols_mobile_with_num">10 Columns Mobile with Numbers</string>
    <string name="pref_method_soft_layout_10cols_mobile_with_apostrophe">10 Columns Mobile with Apostrophe</string>
    <string name="pref_method_soft_layout_10cols_mobile_with_apostrophe_num">10 Columns Mobile with Apostrophe and Numbers</string>
    <string name="pref_method_soft_layout_10cols_dvorak">10 Columns Dvorak</string>
    <string name="pref_method_soft_layout_10cols_dvorak_with_num">10 Columns Dvorak with Numbers</string>
    <string name="pref_method_soft_layout_10cols_mod_quote">10 Columns Mod. Quote</string>
    <string name="pref_method_soft_layout_10cols_mod_quote_with_num">10 Columns Mod. Quote with Numbers</string>
    <string name="pref_method_soft_layout_11cols_tablet">11 Columns Tablet</string>
    <string name="pref_method_soft_layout_11cols_tablet_with_num">11 Columns Tablet with Numbers</string>
    <string name="pref_method_soft_layout_11cols_tablet_with_quote">11 Columns Tablet with Quote</string>
    <string name="pref_method_soft_layout_11cols_tablet_with_quote_num">11 Columns Tablet with Quote and Numbers</string>
    <string name="pref_method_soft_layout_full_pc">Full PC</string>
    <string name="pref_method_soft_layout_mini_7cols">Mini 7 Columns</string>
    <string name="pref_method_soft_layout_mini_8cols">Mini 8 Columns</string>
    <string name="pref_method_soft_layout_12key_4cols">12 Key 4 Columns</string>
    <string name="pref_method_soft_layout_15key_a">15 Key A</string>
    <string name="pref_method_soft_layout_15key_b">15 Key B</string>
    <string name="pref_method_soft_layout_15key_a_with_num">15 Key A with Numbers</string>
    <string name="pref_method_soft_layout_15key_b_with_num">15 Key B with Numbers</string>
    <string name="pref_method_hard_layout_title">Keyboard Layout</string>
    <string name="pref_method_hard_layout_summary">Choose a keyboard layout.</string>
    <string name="pref_method_more_keys_layout_title">More Keys Layout</string>
    <string name="pref_method_more_keys_layout_summary">Select more keys layouts to use.</string>
    <string name="pref_method_more_keys_layout_top_row_numbers">Top Row Numbers</string>
    <string name="pref_method_more_keys_layout_latin_supplement">Latin Supplement</string>
    <string name="pref_method_more_keys_layout_romanization">Hangul Romanization</string>
    <string name="pref_method_hard_timeout_title">Composition Timeout</string>
    <string name="pref_method_hard_timeout_summary">Set composition timeout in milliseconds.</string>
    <string name="pref_method_symbols_soft_layout_title">Symbols Soft Layout</string>
    <string name="pref_method_symbols_soft_layout_summary">Choose a symbols soft keyboard layout.</string>
    <string name="pref_method_symbols_layout_title">Symbols Layout</string>
    <string name="pref_method_symbols_layout_summary">Choose a symbols keyboard layout.</string>
    <string name="pref_method_hard_layout_symbols_a">Symbols A</string>
    <string name="pref_method_hard_layout_symbols_b">Symbols B</string>
    <string name="pref_method_hard_layout_symbols_blackberry">Symbols Blackberry</string>
    <string name="pref_method_hard_layout_symbols_google">Symbols Google</string>
    <string name="pref_method_hard_layout_alphabet_qwerty">Qwerty</string>
    <string name="pref_method_hard_layout_alphabet_dvorak">Dvorak</string>
    <string name="pref_method_hard_layout_alphabet_colemak">Colemak</string>
    <string name="pref_method_hard_layout_alphabet_7cols_wert">7 Columns WERT</string>
    <string name="pref_method_hard_layout_alphabet_12key_a">T12 Type A</string>
    <string name="pref_method_hard_layout_alphabet_15key_qwerty_compact">T15 Qwerty Compact</string>
    <string name="pref_method_hard_layout_alphabet_15key_dvorak_compact">T15 Dvorak Compact</string>
    <string name="pref_method_hard_layout_dubeol_standard">Dubeolsik Standard</string>
    <string name="pref_method_hard_layout_sebeol_390">Sebeolsik 390</string>
    <string name="pref_method_hard_layout_sebeol_391">Sebeolsik Final</string>
    <string name="pref_method_hard_layout_sebeol_391_strict">Sebeolsik Final (Strict)</string>
    <string name="pref_method_hard_layout_sebeol_shin_original">Shin Sebeolsik Original</string>
    <string name="pref_method_hard_layout_sebeol_shin_edit">Shin Sebeolsik Edit</string>
    <string name="pref_method_hard_layout_sebeol_mini_shin">Mini Shin Sebeolsik Experimental</string>
    <string name="pref_method_hard_layout_dubeol_google">Dubeolsik Google Danmoeum</string>
    <string name="pref_method_hard_layout_dubeol_cheonjiin">T10 Dubeolsik Cheonjiin</string>
    <string name="pref_method_hard_layout_dubeol_naratgeul">T12 Dubeolsik Naratgeul</string>
    <string name="pref_method_hard_layout_dubeol_compact">T15 Dubeolsik Standard Compact Experimental</string>
    <string name="pref_method_hard_layout_sebeol_compact">T15 Sebeolsik Compact Experimental</string>
    <string name="pref_method_physical_title">Physical Keyboard</string>
    <string name="pref_method_physical_hard_layout_title">Physical Keyboard Layout</string>
    <string name="pref_method_physical_hard_layout_summary">Choose a keyboard layout to be used on physical keyboards.</string>
    <string name="pref_method_prediction_title">Prediction</string>
    <string name="pref_method_prediction_reset_user_dictionary_title">Clear User Dictionary</string>
    <string name="pref_method_prediction_reset_user_dictionary_summary">Clear all learned words.</string>
    <string name="pref_activation_enabler_title">Enable / Disable input methods</string>
    <string name="pref_activation_enabler_summary">Please enable \'LBoard\'.</string>
    <string name="pref_activation_picker_title">Show input method picker</string>
</resources>