<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/pref_method_virtual_appearance_title">
        <ListPreference
            android:key="common_soft_theme"
            android:title="@string/pref_common_soft_theme_title"
            android:summary="@string/pref_common_soft_theme_summary"
            android:entries="@array/common_soft_themes"
            android:entryValues="@array/common_soft_theme_ids"
            android:defaultValue="white" />
        <io.github.lee0701.lboard.settings.IntEditTextPreference
            android:key="common_soft_height"
            android:title="@string/pref_common_soft_height_title"
            android:summary="@string/pref_common_soft_height_summary"
            android:defaultValue="50" />
        <ListPreference
            android:key="common_soft_mode"
            android:title="@string/pref_common_soft_mode_title"
            android:summary="@string/pref_common_soft_mode_summary"
            android:entries="@array/common_soft_modes"
            android:entryValues="@array/common_soft_mode_ids"
            android:defaultValue="@string/pref_common_soft_mode_default" />
        <CheckBoxPreference
            android:key="common_soft_labels"
            android:title="@string/pref_common_soft_labels_title"
            android:summary="@string/pref_common_soft_labels_summary"
            android:defaultValue="true" />
        <CheckBoxPreference
            android:key="common_soft_labels_compatible"
            android:title="@string/pref_common_soft_labels_compatible_title"
            android:summary="@string/pref_common_soft_labels_compatible_summary"
            android:defaultValue="true" />
        <io.github.lee0701.lboard.settings.IntEditTextPreference
            android:key="common_soft_margin_horizontal"
            android:title="@string/pref_common_margin_horizontal_title"
            android:summary="@string/pref_common_margin_horizontal_summary"
            android:defaultValue="0" />
        <io.github.lee0701.lboard.settings.IntEditTextPreference
            android:key="common_soft_margin_bottom"
            android:title="@string/pref_common_margin_bottom_title"
            android:summary="@string/pref_common_margin_bottom_summary"
            android:defaultValue="0" />
        <io.github.lee0701.lboard.settings.IntCheckBoxPreference
            android:key="common_soft_one_handed_mode"
            android:title="@string/pref_common_soft_one_handed_title"
            android:summary="@string/pref_common_soft_one_handed_summary"
            android:defaultValue="0" />
        <io.github.lee0701.lboard.settings.IntEditTextPreference
            android:key="common_soft_one_handed_margin"
            android:title="@string/pref_common_soft_one_handed_margin_title"
            android:summary="@string/pref_common_soft_one_handed_margin_summary"
            android:defaultValue="250" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_method_virtual_behaviour_title">
        <CheckBoxPreference
            android:key="common_soft_vibrate"
            android:title="@string/pref_common_soft_vibrate_title"
            android:summary="@string/pref_common_soft_vibrate_summary"
            android:defaultValue="true" />
        <io.github.lee0701.lboard.settings.IntEditTextPreference
            android:key="common_soft_vibrate_duration"
            android:title="@string/pref_common_soft_vibrate_duration_title"
            android:summary="@string/pref_common_soft_vibrate_duration_summary"
            android:defaultValue="30" />
        <CheckBoxPreference
            android:key="common_soft_sound"
            android:title="@string/pref_common_soft_sound_title"
            android:summary="@string/pref_common_soft_sound_summary"
            android:defaultValue="true" />
        <ListPreference
            android:key="common_soft_sound_type"
            android:title="@string/pref_common_soft_sound_type_title"
            android:summary="@string/pref_common_soft_sound_type_summary"
            android:entries="@array/common_soft_sound_types"
            android:entryValues="@array/common_soft_sound_type_ids"
            android:defaultValue="click" />
        <io.github.lee0701.lboard.settings.IntEditTextPreference
            android:key="common_soft_sound_volume"
            android:title="@string/pref_common_soft_sound_volume_title"
            android:summary="@string/pref_common_soft_sound_volume_summary"
            android:defaultValue="100" />
        <CheckBoxPreference
            android:key="common_soft_popups"
            android:title="@string/pref_common_soft_popups_title"
            android:summary="@string/pref_common_soft_popups_summary"
            android:defaultValue="false" />
        <io.github.lee0701.lboard.settings.IntEditTextPreference
            android:key="common_soft_repeat_rate"
            android:title="@string/pref_common_repeat_rate_title"
            android:summary="@string/pref_common_repeat_rate_summary"
            android:defaultValue="50" />
        <io.github.lee0701.lboard.settings.IntEditTextPreference
            android:key="common_soft_long_click_delay"
            android:title="@string/pref_common_long_click_delay_title"
            android:summary="@string/pref_common_long_click_delay_summary"
            android:defaultValue="300" />
        <CheckBoxPreference
            android:key="common_soft_switch_between_methods"
            android:title="@string/pref_common_soft_switch_between_methods_title"
            android:summary="@string/pref_common_soft_switch_between_methods_summary"
            android:defaultValue="true" />
    </PreferenceCategory>
</PreferenceScreen>